Added animations, random person, etc

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -33,11 +33,13 @@ body {
   justify-content: flex-start;
   align-items: flex-start;
   position: relative;
+  background-color: var(--main-claret);
+  border: 2px solid var(--main-yellow);
+  border-radius: 20px;
+  padding: 10px;
 }
 
 .playerslist {
-  position: absolute;
-  top: 90px;
 }
 
 .cardsection {
@@ -49,6 +51,15 @@ body {
   border: var(--main-yellow) 2px solid;
   border-radius: 25px;
   background: var(--main-claret);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  justify-items: flex-start;
+  align-items: flex-start;
+}
+
+h2 {
+  padding: 10px;
 }
 
 .normalbutton {
@@ -64,9 +75,31 @@ body {
   cursor: pointer;
 }
 
+.normalbutton:hover {
+  background-color: var(--main-pink);
+}
+
+.addPersonButton {
+  border-radius: 25px;
+  font-size: 1.1em;
+  margin-top: 4px;
+  padding: 10px;
+  color: var(--main-yellow);
+  border: 2px solid var(--main-yellow);
+  background-color: #d62b5c;
+  font-family: "Arvo", serif;
+  outline: none;
+  cursor: pointer;
+  margin: 0 auto;
+}
+
+.addPersonButton:hover {
+  background-color: var(--main-pink);
+}
+
 .deletebutton {
-  background-color: var(--main-purple);
-  border: var(--main-purple);
+  background-color: var(--main-claret);
+  border: var(--main-claret);
   outline: none;
 }
 
@@ -75,7 +108,7 @@ body {
 }
 
 p {
-  color: var(--main-pink);
+  color: var(--main-purple);
   font-size: 150%;
   font-family: "Arvo", serif;
 }
@@ -128,6 +161,13 @@ input[type="text"] {
   border-radius: 25px;
   font-size: 1.1em;
   padding: 10px;
+  outline: none;
+}
+
+.ruletext {
+  color: var(--main-yellow);
+  padding: 10px;
+  margin: 0 auto;
 }
 
 /* Grow */
